// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Docusaurus v2 > does not compile - exclude versioned docs 1`] = `
"[31m[ERROR][39m Some MDX files couldn't compile successfully!

[33m---[39m
Error while compiling file docs/api/plugins/plugin-pwa.md:
Details: Unexpected character \`=\` (U+003D) before name, expected a character that can start a name, such as a letter, \`$\`, or \`_\`
Line=123 Column=48
[33m---[39m
Error while compiling file docs/deployment.mdx:
Details: Unexpected closing tag \`</details>\`, expected corresponding closing tag for \`<TabItem>\` (320:1-320:48)
Line=443 Column=1
[33m---[39m
Error while compiling file docs/introduction.md:
Details: Unexpected character \`/\` (U+002F) after self-closing slash, expected \`>\` to end the tag (note: JS comments in JSX tags are not supported in MDX)
Line=57 Column=6
[33m---[39m
"
`;

exports[`Docusaurus v2 > does not compile - only docs 1`] = `
"[31m[ERROR][39m Some MDX files couldn't compile successfully!

[33m---[39m
Error while compiling file docs/api/plugins/plugin-pwa.md:
Details: Unexpected character \`=\` (U+003D) before name, expected a character that can start a name, such as a letter, \`$\`, or \`_\`
Line=123 Column=48
[33m---[39m
Error while compiling file docs/deployment.mdx:
Details: Unexpected closing tag \`</details>\`, expected corresponding closing tag for \`<TabItem>\` (320:1-320:48)
Line=443 Column=1
[33m---[39m
Error while compiling file docs/introduction.md:
Details: Unexpected character \`/\` (U+002F) after self-closing slash, expected \`>\` to end the tag (note: JS comments in JSX tags are not supported in MDX)
Line=57 Column=6
[33m---[39m
"
`;

exports[`Docusaurus v2 > does not compile 1`] = `
"[31m[ERROR][39m Some MDX files couldn't compile successfully!

[33m---[39m
Error while compiling file docs/api/plugins/plugin-pwa.md:
Details: Unexpected character \`=\` (U+003D) before name, expected a character that can start a name, such as a letter, \`$\`, or \`_\`
Line=123 Column=48
[33m---[39m
Error while compiling file docs/deployment.mdx:
Details: Unexpected closing tag \`</details>\`, expected corresponding closing tag for \`<TabItem>\` (320:1-320:48)
Line=443 Column=1
[33m---[39m
Error while compiling file docs/introduction.md:
Details: Unexpected character \`/\` (U+002F) after self-closing slash, expected \`>\` to end the tag (note: JS comments in JSX tags are not supported in MDX)
Line=57 Column=6
[33m---[39m
Error while compiling file versioned_docs/version-2.0.0-beta.22/api/plugins/plugin-pwa.md:
Details: Unexpected character \`=\` (U+003D) before name, expected a character that can start a name, such as a letter, \`$\`, or \`_\`
Line=123 Column=48
[33m---[39m
Error while compiling file versioned_docs/version-2.0.0-beta.22/deployment.mdx:
Details: Unexpected closing tag \`</details>\`, expected corresponding closing tag for \`<TabItem>\` (320:1-320:48)
Line=443 Column=1
[33m---[39m
Error while compiling file versioned_docs/version-2.0.0-beta.22/introduction.md:
Details: Unexpected character \`/\` (U+002F) after self-closing slash, expected \`>\` to end the tag (note: JS comments in JSX tags are not supported in MDX)
Line=57 Column=6
[33m---[39m
Error while compiling file versioned_docs/version-2.0.0-rc.1/api/plugins/plugin-pwa.md:
Details: Unexpected character \`=\` (U+003D) before name, expected a character that can start a name, such as a letter, \`$\`, or \`_\`
Line=123 Column=48
[33m---[39m
Error while compiling file versioned_docs/version-2.0.0-rc.1/deployment.mdx:
Details: Unexpected closing tag \`</details>\`, expected corresponding closing tag for \`<TabItem>\` (320:1-320:48)
Line=443 Column=1
[33m---[39m
Error while compiling file versioned_docs/version-2.0.0-rc.1/introduction.md:
Details: Unexpected character \`/\` (U+002F) after self-closing slash, expected \`>\` to end the tag (note: JS comments in JSX tags are not supported in MDX)
Line=57 Column=6
[33m---[39m
"
`;
